[package]
name = "hades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
log = { version = "0.4.20", features = ["std"] }
time = { version = "0.3.31" , features = ["formatting", "local-offset", "macros"] }
