[package]
name = "hades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
glow = "0.13.1"
imgui = "0.12.0"
imgui-glow-renderer = "0.12.0"
imgui-winit-support = "0.12.0"
log = { version = "0.4.20", features = ["std"] }
time = { version = "0.3.31" , features = ["formatting", "local-offset", "macros"] }
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }

# For now use opengl bindings
glutin = "0.31.1"
glutin-winit = "0.4.2"